Development
    Switch GIO async caching to use conditionals instead of locks
    Change code to use GCond to signal when mplayer is complete rather than depending on locks to block
    Updated Polish translation
    Replace usage of stdout/stderr with out/err
    Unfullscreen on last file
    Add command line option "--showsubtitles", defaults to '1' or 'on'
    Make the playlist show up everytime when first visible, go fullscreen and then come out
    Retain View Subtitle menu selection across files in the playlist
    Remove write and replace with g_io_channels_write_chars (should be safer)
    Add spawn pid cleanup
    Correct another glib assertion
    Fixed GTK assertion using 'export G_DEBUG=fatal_warnings' and ran gdb
    Remove need to set playback window to 16x16 since we now know the size of the video and window is properly sized
    Add some NULL value traps
    Only set the mixer on mplayer when using alsa as the ao, causes problems in pulse
    Prevent ao and vo from being improperly cleared
    Work around API change in libgpod
    Minor cleanups, when using pulse audio, set volume to max (limited by Master)
    Try and setup the video window eariler, makes for smoother redraw
    Usage of NULL protection
    Fix title display in window border
    More debugging information
    Fix problem with resizing when second video is played when first is started with playlist hidden
    Add non-blocking flag to channel io, may help *BSDs
    Added Bulgarian translation
    Updated Russian translation
    Work around $HOME not being set
    Change alignment to multiples of 16, but only when window size is smaller than video size
    Make video size a multiple of 8 in x and y directions
    Protect GTK assertions in adjust and reset pane operations
    All fallback when under plugin control to restart playback when cache is filled, if we get a QT file with header at end of file
    Cleanup some widgets in realplayer mode